@@ -1,4 +1,33 @@
-/* RCSID("$Id: nchan.h,v 1.1 1999/10/20 19:54:30 bg Exp $"); */
+/*
+ * Copyright (c) 1999 Markus Friedl.  All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ * 1. Redistributions of source code must retain the above copyright
+ *    notice, this list of conditions and the following disclaimer.
+ * 2. Redistributions in binary form must reproduce the above copyright
+ *    notice, this list of conditions and the following disclaimer in the
+ *    documentation and/or other materials provided with the distribution.
+ * 3. All advertising materials mentioning features or use of this software
+ *    must display the following acknowledgement:
+ *      This product includes software developed by Markus Friedl.
+ * 4. The name of the author may not be used to endorse or promote products
+ *    derived from this software without specific prior written permission.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
+ * IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
+ * OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
+ * IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
+ * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
+ * NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+ * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
+ * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+ * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
+ * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ */
+
+/* RCSID("$Id: nchan.h,v 1.2 2000/01/27 10:47:11 bg Exp $"); */
 
 #ifndef NCHAN_H
 #define NCHAN_H
@@ -7,24 +36,24 @@
  * SSH Protocol 1.5 aka New Channel Protocol
  * Thanks to Martina, Axel and everyone who left Erlangen, leaving me bored.
  * Written by Markus Friedl in October 1999
- * 
+ *
  * Protocol versions 1.3 and 1.5 differ in the handshake protocol used for the
  * tear down of channels:
- * 
+ *
  * 1.3:	strict request-ack-protocol:
  * 	CLOSE	->
  * 		<-  CLOSE_CONFIRM
- * 
+ *
  * 1.5:	uses variations of:
  * 	IEOF	->
  * 		<-  OCLOSE
  * 		<-  IEOF
  * 	OCLOSE	->
  * 	i.e. both sides have to close the channel
- * 
+ *
  * See the debugging output from 'ssh -v' and 'sshd -d' of
  * ssh-1.2.27 as an example.
- * 
+ *
  */
 
 /* ssh-proto-1.5 overloads prot-1.3-message-types */
@@ -44,14 +73,14 @@
 #define CHAN_OUTPUT_CLOSED		0x80
 
 /* EVENTS for the input state */
-void chan_rcvd_oclose(Channel *c);
-void chan_read_failed(Channel *c);
-void chan_ibuf_empty(Channel *c);
+void    chan_rcvd_oclose(Channel * c);
+void    chan_read_failed(Channel * c);
+void    chan_ibuf_empty(Channel * c);
 
 /* EVENTS for the output state */
-void chan_rcvd_ieof(Channel *c);
-void chan_write_failed(Channel *c);
-void chan_obuf_empty(Channel *c);
+void    chan_rcvd_ieof(Channel * c);
+void    chan_write_failed(Channel * c);
+void    chan_obuf_empty(Channel * c);
 
-void chan_init_iostates(Channel *c);
+void    chan_init_iostates(Channel * c);
 #endif
